--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -761,6 +761,7 @@ p {
   z-index: 1;
   background: var(--e-global-color-white);
   transition: all 0.3s ease-in-out;
+  height: 100%;
 }
 .offer-section .offer_boxcontent:hover {
   background: var(--e-global-color-primary);
@@ -3161,7 +3162,6 @@ p {
 .service-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-auto-rows: 1fr;
   grid-gap: 30px;
   width: 100%;
 }
